Update note section with a thank you message
Removed instructions and added a thank you message.

--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
       </p>
 
       <div class="note">
-        Dica: substitua “seuemail@exemplo.com” pelo seu e ajuste a data de “Última atualização”.
-        Se você quiser exibir a logo no topo, coloque um arquivo <strong>logo.png</strong> na mesma pasta deste HTML.
+       Muito obrigado por usar o aplicativo!.
       </div>
     </main>
 
