Fix punctuation in thank you message

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </p>
 
       <div class="note">
-       Muito obrigado por usar o aplicativo!.
+       Muito obrigado por usar o aplicativo!
       </div>
     </main>
 
